Fix z-index
Former-commit-id: 173bfbd8f9b6daac8bdb9ac16058848fc8585ec5
Former-commit-id: ca62663e3a01536822218c9aeb07920450e87fad

--- a/src/css/UIExtension.css
+++ b/src/css/UIExtension.css
@@ -25,6 +25,7 @@
 
 .menu-button .menu-popover.active {
    display: block;
+   z-index: 9;
 }
 
 .menu-popover-item {
